<resources>
    <string name="app_name">KonversiMU1</string>
    <string name="nilai_mata_uang">Nilai Mata Uang</string>
    <string name="pilih_mata_uang">Pilih Mata Uang?</string>
    <string name="euro">Euro</string>
    <string name="dollar">US Dollar</string>
    <string name="yen">Japanese Yen</string>
    <string name="riyal">Saudi Riyal</string>
    <string name="calculate">KONVERSI</string>
    <string name="cashAmount">Nilai Rupiah: %s</string>

</resources>